--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,6 @@ find_folder = "*"
 gfx_device_gl = "0.5.0"
 gfx = "0.7.0"
 piston2d-gfx_graphics = "0.11.0"
+piston2d-opengl_graphics = "0.28.0"
 nalgebra = "*"
 ncollide = "*"
